<resources>
    <string name="app_name">My Application</string>
    <string name="sign_up">Sign Up!</string>
    <string name="coffee_dates">Coffee Dates</string>
    <string name="submit">Submit</string>
    <string name="my_field">My Field:</string>
    <string name="about_me">About me:</string>
    <string name="go_back">Go Back</string>
    <string name="datingapp_settings">DatingApp Settings</string>
    <string name="datingapp_matches">DatingApp Matches</string>
    <string name="derick">Derick</string>
    <string name="defaultAge">32</string>
    <string name="age">Age</string>
    <string name="place_of_work">Place of Work</string>
    <string name="bio">Bio</string>
    <string name="MySharedPrefs">MySharedPrefs</string>
    <string name="Profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="Matches">Matches</string>




    <string name="Empty">Empty Field</string>
    <string name="Name">NAME</string>
    <string name="Bio">BIO</string>
    <string name="Age">AGE</string>
    <string name="Work">WORK</string>
    <string name="youlike">\"You liked \"</string>
    <string name="like">Liked</string>
    <string name="name">Name</string>
    <string name="max_distance">Max Distance</string>
    <string name="gender">Gender</string>
    <string name="min_age">Min Age</string>
    <string name="max_age">Max Age</string>
    <string name="looking_for">Looking For</string>
    <string-array name="Match_Names">
        <item>Jessica</item>
        <item>Mark</item>
        <item>Fiona</item>
        <item>Chuck</item>
    </string-array>
    <string-array name="Match_Ages">
        <item>23</item>
    <item>42</item>
    <item>52</item>
    <item>80</item>
    </string-array>



</resources>
