<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/java"
                android:layout_width="@dimen/java_image"
                android:layout_height="@dimen/java_image"
                android:layout_marginLeft="@dimen/java_image2"
                android:src="@drawable/coffee" />

            <TextView
                android:id="@+id/Nameplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mark Whalburg"
                android:textSize="@dimen/nameText"
                android:layout_below="@id/java"
                android:layout_margin="@dimen/nameMargin"
                />

            <TextView
                android:id="@+id/Ageplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/java"
                android:layout_marginTop="@dimen/agedp"
                android:layout_marginBottom="@dimen/ageBottom"
                android:layout_alignParentRight="true"
                android:text="@string/defaultAge"
                android:layout_marginRight="@dimen/agePlateRight"
                android:textSize="@dimen/ageSize" />

            <TextView
                android:id="@+id/Bioplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textSize="@dimen/BioPlateSize"
                android:textStyle="bold"
                android:layout_below="@id/Nameplate"
                android:layout_marginLeft="@dimen/BioMargin"
                android:layout_marginRight="@dimen/BioMargin"
                />

            <TextView
                android:id="@+id/Bioblock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/BioplateSize"
                android:layout_below="@id/Bioplate"
                android:layout_marginLeft="@dimen/BioMargin"
                android:layout_marginRight="@dimen/BioMargin"
                android:layout_marginTop="@dimen/BioMargin2"
                />

            <TextView
                android:id="@+id/Jobplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_field"
                android:textSize="@dimen/BioplateSize"
                android:textStyle="bold"
                android:layout_below="@id/Bioblock"
                android:layout_marginLeft="@dimen/BioMargin"
                android:layout_marginRight="@dimen/BioMargin"
                android:layout_marginTop="@dimen/BioMargin2"
                />

            <TextView
                android:id="@+id/Jobblock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/BioplateSize"
                android:layout_below="@id/Jobplate"
                android:layout_marginLeft="@dimen/BioMargin"
                android:layout_marginRight="@dimen/BioMargin"
                android:layout_marginTop="@dimen/BioMargin2"
                />

            <Button
                android:layout_below="@id/Jobblock"
                android:layout_marginTop="@dimen/BioMargin"
                android:layout_width="@dimen/ButtonSize"
                android:layout_height="@dimen/ButtonHeight"
                android:id="@+id/Submit2"
                android:layout_marginLeft="@dimen/Button_Center"
                android:layout_marginBottom="@dimen/Button_Buffer"
                android:hint="@string/go_back" />

        </RelativeLayout>
    </ScrollView>


