<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/testPad"
            android:text="@string/datingapp_settings"
            android:textSize="@dimen/testPad"
             />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/editTextDimen"
            android:layout_marginTop="@dimen/editTextDimen"
            android:hint="@string/max_distance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textViewMargin"
            android:layout_marginTop="@dimen/textViewMargin"
            android:text=""
            android:textSize="@dimen/testPad"
            app:layout_constraintStart_toEndOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/settings" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textViewMargin"
            android:layout_marginTop="112dp"
            android:text=""
            android:textSize="@dimen/testPad"
            app:layout_constraintStart_toEndOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/settings" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="284dp"
            android:text=""
            android:textSize="@dimen/testPad"
            app:layout_constraintStart_toEndOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/settings" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="228dp"
            android:text=""
            android:textSize="@dimen/testPad"
            app:layout_constraintStart_toEndOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/settings" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="168dp"
            android:text=""
            android:textSize="@dimen/testPad"
            app:layout_constraintStart_toEndOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/settings" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="114dp"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/gender"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="114dp"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="156dp"
            android:ems="10"
            android:hint="@string/min_age"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="114dp"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="216dp"
            android:ems="10"
            android:hint="@string/max_age"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="114dp"
            android:layout_height="41dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="272dp"
            android:ems="10"
            android:hint="@string/looking_for"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:text="Update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText7"
            android:onClick="updateDatabase"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="80dp"
            android:text="Toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText7"
            android:onClick="EnableNetworkUpdates"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
