...
    android:layout_height="match_parent"
    android:id="@+id/MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/Coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/MainPad"
        android:text="@string/coffee_dates"
        android:textSize="@dimen/MainText" />
...
        android:layout_marginLeft="@dimen/JavaMarginLeft"
        android:layout_marginTop="@dimen/JavaMarginTop"
        android:src="@drawable/coffee"
        />

    <TextView
        android:id="@+id/Image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/SignUp"
        android:layout_marginLeft="@dimen/SignUpMarginLeft"
        android:layout_marginTop="@dimen/SignUpMarginTop"
...
